--- a/experimentation/vae/deeeep-Copy1.ipynb
+++ b/experimentation/vae/deeeep-Copy1.ipynb
@@ -21,7 +21,7 @@
     "BATCH_SIZE = 128\n",
     "EPOCHS = 30\n",
     "LAYER_SIZE = 30\n",
-    "S_LAYER_SIZE = 15\n",
+    "S_LAYER_SIZE = 10\n",
     "LATENT_SIZE = 3"
    ]
   },
@@ -74,22 +74,17 @@
     "        \n",
     "        # Encoder\n",
     "        self.l1 = nn.Linear(INPUT_SIZE, S_LAYER_SIZE)\n",
-    "        self.d1 = nn.Linear(S_LAYER_SIZE, LAYER_SIZE)\n",
-    "        self.d2 = nn.Linear(LAYER_SIZE, S_LAYER_SIZE)\n",
     "        self.l2a = nn.Linear(S_LAYER_SIZE, LATENT_SIZE)\n",
     "        self.l2b = nn.Linear(S_LAYER_SIZE, LATENT_SIZE)\n",
     "        \n",
     "        # Decoder\n",
     "        self.l3 = nn.Linear(LATENT_SIZE, S_LAYER_SIZE)\n",
-    "        self.d3 = nn.Linear(S_LAYER_SIZE, LAYER_SIZE)\n",
-    "        self.d4 = nn.Linear(LAYER_SIZE, S_LAYER_SIZE)\n",
     "        self.l4 = nn.Linear(S_LAYER_SIZE, INPUT_SIZE)\n",
     "            \n",
     "    # Run some data through the encoder\n",
     "    def encode(self, x):\n",
     "        x = F.relu(self.l1(x))\n",
-    "        x = F.relu(self.d1(x))\n",
-    "        x = F.relu(self.d2(x))\n",
+    "\n",
     "        # return the mu and the sigma\n",
     "        return self.l2a(x), self.l2b(x)\n",
     "    \n",
@@ -101,8 +96,7 @@
     "    \n",
     "    def decode(self, x):\n",
     "        x = F.relu(self.l3(x))\n",
-    "        x = F.relu(self.d3(x))\n",
-    "        x = F.relu(self.d4(x))\n",
+    "\n",
     "        return torch.sigmoid(self.l4(x)) # sigmoid vs tanh\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -125,7 +119,7 @@
     "    BCE = F.binary_cross_entropy(recon_x, x, reduction='sum')\n",
     "#     KLD = -0.5 * torch.sum(1 + sigma - mu.pow(2) - sigma.exp())\n",
     "#     return BCE + KLD\n",
-    "    return BCE"
+    "    return BCE ** 4"
    ]
   },
   {
@@ -202,36 +196,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 6.795149725341797\n",
-      "Epoch: 1, Loss: 6.289295653076172\n",
-      "Epoch: 2, Loss: 6.233077553710937\n",
-      "Epoch: 3, Loss: 6.23162383605957\n",
-      "Epoch: 4, Loss: 6.230850457763672\n",
-      "Epoch: 5, Loss: 6.229844189453125\n",
-      "Epoch: 6, Loss: 6.228378950195313\n",
-      "Epoch: 7, Loss: 6.226119644165039\n",
-      "Epoch: 8, Loss: 6.219504203491211\n",
-      "Epoch: 9, Loss: 6.20336944946289\n",
-      "Epoch: 10, Loss: 6.2008817016601565\n",
-      "Epoch: 11, Loss: 6.200697495117187\n",
-      "Epoch: 12, Loss: 6.200588860473633\n",
-      "Epoch: 13, Loss: 6.200510561523438\n",
-      "Epoch: 14, Loss: 6.200440471191406\n",
-      "Epoch: 15, Loss: 6.200386745605469\n",
-      "Epoch: 16, Loss: 6.200322098388672\n",
-      "Epoch: 17, Loss: 6.2002300653076174\n",
-      "Epoch: 18, Loss: 6.200164448852539\n",
-      "Epoch: 19, Loss: 6.200112952270508\n",
-      "Epoch: 20, Loss: 6.200067947998047\n",
-      "Epoch: 21, Loss: 6.200028411865234\n",
-      "Epoch: 22, Loss: 6.1999930688476566\n",
-      "Epoch: 23, Loss: 6.199966968994141\n",
-      "Epoch: 24, Loss: 6.199940189208984\n",
-      "Epoch: 25, Loss: 6.199921044311523\n",
-      "Epoch: 26, Loss: 6.199903092041016\n",
-      "Epoch: 27, Loss: 6.1998881597900395\n",
-      "Epoch: 28, Loss: 6.199872680664063\n",
-      "Epoch: 29, Loss: 6.199857052001953\n"
+      "Epoch: 0, Loss: 5379398507.06944\n",
+      "Epoch: 1, Loss: 4307011407.0528\n",
+      "Epoch: 2, Loss: 3462031334.52288\n",
+      "Epoch: 3, Loss: 3226675737.64096\n",
+      "Epoch: 4, Loss: 3179060576.01024\n",
+      "Epoch: 5, Loss: 3164086175.00672\n",
+      "Epoch: 6, Loss: 3161235195.00288\n",
+      "Epoch: 7, Loss: 3158648705.92512\n",
+      "Epoch: 8, Loss: 3153108248.24832\n",
+      "Epoch: 9, Loss: 3141323434.31168\n",
+      "Epoch: 10, Loss: 3132620711.936\n",
+      "Epoch: 11, Loss: 3129424152.24832\n",
+      "Epoch: 12, Loss: 3124840290.14016\n",
+      "Epoch: 13, Loss: 3111682769.38752\n",
+      "Epoch: 14, Loss: 3105270831.34976\n",
+      "Epoch: 15, Loss: 3104594566.26688\n",
+      "Epoch: 16, Loss: 3104418103.95136\n",
+      "Epoch: 17, Loss: 3104345501.12256\n",
+      "Epoch: 18, Loss: 3104303380.23424\n",
+      "Epoch: 19, Loss: 3104273908.20352\n",
+      "Epoch: 20, Loss: 3104255093.9648\n",
+      "Epoch: 21, Loss: 3104244401.02912\n",
+      "Epoch: 22, Loss: 3104230299.648\n",
+      "Epoch: 23, Loss: 3104214292.39808\n",
+      "Epoch: 24, Loss: 3104208257.59744\n",
+      "Epoch: 25, Loss: 3104200201.8304\n",
+      "Epoch: 26, Loss: 3104193576.79616\n",
+      "Epoch: 27, Loss: 3104186662.74816\n",
+      "Epoch: 28, Loss: 3104181555.2\n",
+      "Epoch: 29, Loss: 3104175528.59136\n"
      ]
     }
    ],
@@ -298,35 +292,35 @@
      "output_type": "stream",
      "text": [
       "Action\n",
-      "tensor(0.2089, device='cuda:0')\n",
-      "tensor(0.4980, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.4307, device='cuda:0')\n",
+      "tensor(0.4945, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.3169, device='cuda:0')\n",
-      "tensor(0.5068, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0555, device='cuda:0')\n",
+      "tensor(0.5006, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.4367, device='cuda:0')\n",
-      "tensor(0.5021, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.6577, device='cuda:0')\n",
+      "tensor(0.5238, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.9360, device='cuda:0')\n",
-      "tensor(0.4949, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.5456, device='cuda:0')\n",
+      "tensor(0.4897, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.9437, device='cuda:0')\n",
-      "tensor(0.4950, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.1012, device='cuda:0')\n",
+      "tensor(0.4994, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.2021, device='cuda:0')\n",
-      "tensor(0.4970, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0158, device='cuda:0')\n",
+      "tensor(0.4959, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.6384, device='cuda:0')\n",
-      "tensor(0.4320, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.6852, device='cuda:0')\n",
+      "tensor(0.4943, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.4656, device='cuda:0')\n",
-      "tensor(0.5015, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.9864, device='cuda:0')\n",
+      "tensor(0.4853, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.6459, device='cuda:0')\n",
-      "tensor(0.5027, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.8274, device='cuda:0')\n",
+      "tensor(0.5001, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.4483, device='cuda:0')\n",
-      "tensor(0.4944, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.3532, device='cuda:0')\n",
+      "tensor(0.5229, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n"
      ]
     }
@@ -352,35 +346,35 @@
      "output_type": "stream",
      "text": [
       "Reward\n",
-      "tensor(0.1095, device='cuda:0')\n",
-      "tensor(0.0906, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0327, device='cuda:0')\n",
+      "tensor(0.1673, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0873, device='cuda:0')\n",
-      "tensor(0.1067, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0668, device='cuda:0')\n",
+      "tensor(0.1657, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0229, device='cuda:0')\n",
-      "tensor(0.1160, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0511, device='cuda:0')\n",
+      "tensor(0.1597, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.1356, device='cuda:0')\n",
-      "tensor(0.1036, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0267, device='cuda:0')\n",
+      "tensor(0.1720, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0957, device='cuda:0')\n",
-      "tensor(0.0889, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0529, device='cuda:0')\n",
+      "tensor(0.1589, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.1067, device='cuda:0')\n",
-      "tensor(0.1096, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(7.4852e-05, device='cuda:0')\n",
+      "tensor(0.1695, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0522, device='cuda:0')\n",
-      "tensor(0.1262, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0994, device='cuda:0')\n",
+      "tensor(0.1755, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0935, device='cuda:0')\n",
-      "tensor(0.0985, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0380, device='cuda:0')\n",
+      "tensor(0.1688, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.0721, device='cuda:0')\n",
-      "tensor(0.0892, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.1381, device='cuda:0')\n",
+      "tensor(0.1604, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n",
-      "tensor(0.1435, device='cuda:0')\n",
-      "tensor(0.1198, device='cuda:0', grad_fn=<SelectBackward>) \n",
+      "tensor(0.0676, device='cuda:0')\n",
+      "tensor(0.1737, device='cuda:0', grad_fn=<SelectBackward>) \n",
       "\n"
      ]
     }
@@ -403,47 +397,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original:       tensor([0.501, 0.497, 0.503, 0.495, 0.104, 0.500, 0.499, 0.460, 0.593, 0.050, 0.000])\n",
-      "Reconstruction: tensor([    0.501,     0.498,     0.501,     0.499,     0.105,     0.498,     0.502,     0.461,     0.595,     0.051,     0.000],\n",
+      "Original:       tensor([0.501, 0.497, 0.515, 0.467, 0.825, 0.502, 0.494, 0.551, 0.384, 0.050, 0.000])\n",
+      "Reconstruction: tensor([    0.500,     0.500,     0.514,     0.463,     0.851,     0.501,     0.497,     0.549,     0.384,     0.051,     0.000],\n",
       "       grad_fn=<CopyBackwards>)\n",
       "\n",
-      "Latent: tensor([-3.375, -6.272, 11.012], device='cuda:0', grad_fn=<AddBackward0>)\n",
+      "Latent: tensor([-3.066, -9.967,  1.807], device='cuda:0', grad_fn=<AddBackward0>)\n",
       "\n",
-      "Loss: 6.0565080642700195\n",
-      "\n",
-      "\n",
-      "Original:       tensor([0.504, 0.491, 0.548, 0.385, 0.556, 0.507, 0.486, 0.554, 0.368, 0.050, 1.000])\n",
-      "Reconstruction: tensor([0.504, 0.495, 0.552, 0.385, 0.564, 0.503, 0.492, 0.559, 0.370, 0.051, 1.000], grad_fn=<CopyBackwards>)\n",
-      "\n",
-      "Latent: tensor([3.878, 2.486, 3.073], device='cuda:0', grad_fn=<AddBackward0>)\n",
-      "\n",
-      "Loss: 6.357704162597656\n",
+      "Loss: 1454.724609375\n",
       "\n",
       "\n",
-      "Original:       tensor([0.496, 0.508, 0.395, 0.737, 0.102, 0.491, 0.520, 0.355, 0.822, 0.050, 1.000])\n",
-      "Reconstruction: tensor([0.495, 0.514, 0.401, 0.726, 0.075, 0.487, 0.527, 0.355, 0.814, 0.050, 1.000], grad_fn=<CopyBackwards>)\n",
-      "\n",
-      "Latent: tensor([8.092, 2.830, 3.116], device='cuda:0', grad_fn=<AddBackward0>)\n",
-      "\n",
-      "Loss: 5.671856880187988\n",
-      "\n",
-      "\n",
-      "Original:       tensor([0.501, 0.498, 0.538, 0.412, 0.049, 0.501, 0.497, 0.488, 0.530, 0.050, 0.000])\n",
-      "Reconstruction: tensor([    0.501,     0.494,     0.539,     0.415,     0.040,     0.501,     0.497,     0.489,     0.534,     0.051,     0.000],\n",
+      "Original:       tensor([0.499, 0.505, 0.436, 0.646, 0.748, 0.497, 0.509, 0.464, 0.580, 0.050, 0.000])\n",
+      "Reconstruction: tensor([    0.498,     0.504,     0.434,     0.642,     0.792,     0.495,     0.509,     0.461,     0.578,     0.051,     0.000],\n",
       "       grad_fn=<CopyBackwards>)\n",
       "\n",
-      "Latent: tensor([-4.387, -6.511, 10.716], device='cuda:0', grad_fn=<AddBackward0>)\n",
+      "Latent: tensor([-2.875, -9.763,  0.942], device='cuda:0', grad_fn=<AddBackward0>)\n",
       "\n",
-      "Loss: 5.9199981689453125\n",
+      "Loss: 1522.9864501953125\n",
       "\n",
       "\n",
-      "Original:       tensor([0.502, 0.497, 0.466, 0.578, 0.250, 0.500, 0.501, 0.439, 0.633, 0.050, 0.000])\n",
-      "Reconstruction: tensor([    0.500,     0.501,     0.467,     0.575,     0.251,     0.495,     0.506,     0.439,     0.641,     0.051,     0.000],\n",
+      "Original:       tensor([0.499, 0.502, 0.531, 0.427, 0.725, 0.500, 0.498, 0.555, 0.377, 0.050, 0.000])\n",
+      "Reconstruction: tensor([    0.500,     0.500,     0.531,     0.425,     0.771,     0.502,     0.496,     0.555,     0.373,     0.051,     0.000],\n",
       "       grad_fn=<CopyBackwards>)\n",
       "\n",
-      "Latent: tensor([-2.293, -5.911, 11.144], device='cuda:0', grad_fn=<AddBackward0>)\n",
+      "Latent: tensor([-3.301, -9.434,  1.864], device='cuda:0', grad_fn=<AddBackward0>)\n",
       "\n",
-      "Loss: 6.24833869934082\n",
+      "Loss: 1563.5828857421875\n",
+      "\n",
+      "\n",
+      "Original:       tensor([0.500, 0.500, 0.500, 0.500, 0.567, 0.500, 0.499, 0.508, 0.483, 0.050, 0.000])\n",
+      "Reconstruction: tensor([    0.500,     0.501,     0.499,     0.497,     0.596,     0.499,     0.501,     0.506,     0.481,     0.051,     0.000],\n",
+      "       grad_fn=<CopyBackwards>)\n",
+      "\n",
+      "Latent: tensor([-3.415, -8.709,  1.381], device='cuda:0', grad_fn=<AddBackward0>)\n",
+      "\n",
+      "Loss: 1708.4161376953125\n",
+      "\n",
+      "\n",
+      "Original:       tensor([0.498, 0.503, 0.502, 0.498, 0.712, 0.499, 0.502, 0.525, 0.448, 0.050, 0.000])\n",
+      "Reconstruction: tensor([    0.500,     0.501,     0.500,     0.495,     0.759,     0.500,     0.500,     0.523,     0.442,     0.051,     0.000],\n",
+      "       grad_fn=<CopyBackwards>)\n",
+      "\n",
+      "Latent: tensor([-3.201, -9.444,  1.550], device='cuda:0', grad_fn=<AddBackward0>)\n",
+      "\n",
+      "Loss: 1619.307861328125\n",
       "\n",
       "\n"
      ]
@@ -464,9 +460,84 @@
     "    print(f\"Original:       {sample}\")\n",
     "    sample = sample.to(device)\n",
     "    print(f\"Reconstruction: {x}\\n\")\n",
-    "    print(f\"Latent: {list(vae1.encode(sample))[0]}\")\n",
+    "    torch.set_printoptions(precision=3, sci_mode=False, linewidth=140, profile=\"short\")\n",
+    "    print(f\"Latent: {vae1.reparameterize(list(vae1.encode(sample))[0], list(vae1.encode(sample))[1])}\")\n",
     "    print(f\"\\nLoss: {loss}\\n\\n\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = Variable(torch.rand(1, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latents = []\n",
+    "\n",
+    "for i in range(300):\n",
+    "    k = random.randint(1, 6000)\n",
+    "    sample = test_data[k].to(device)\n",
+    "    l = vae1.reparameterize(list(vae1.encode(sample))[0], list(vae1.encode(sample))[1])\n",
+    "    latents.append([i.item() for i in l])\n",
+    "    \n",
+    "np.save(\"latent\", latents)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNBALANCED DATASET\n",
+      "counts of intervals: [0, 0.1]: 4941, [0.1, 0.7]: 728, [0.7, 1]: 4331\n",
+      "-- so the ratio to done and not done (deleting the middle ones) is 0.46710526315789475\n",
+      "The real ration is 0.17664\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = [0, 0, 0]\n",
+    "k = []\n",
+    "for i in range(10000):\n",
+    "    sample = Variable(torch.randn(1, LATENT_SIZE))\n",
+    "    a = vae1.decode(sample.to(\"cuda\"))[0]\n",
+    "    num = float(sum(list(a[10:])))\n",
+    "    k.append(num)\n",
+    "    if num < 0.5:\n",
+    "        res[0] += 1\n",
+    "    elif num <0.6:\n",
+    "        res[1] += 1\n",
+    "    else:\n",
+    "        res[2] += 1\n",
+    "        \n",
+    "d = 0\n",
+    "nd = 0\n",
+    "\n",
+    "for a in test_data:\n",
+    "    if a[10] == 1:\n",
+    "        d += 1\n",
+    "    else:\n",
+    "        nd += 1\n",
+    "        \n",
+    "        \n",
+    "print(f\"UNBALANCED DATASET\")\n",
+    "print(f\"counts of intervals: [0, 0.1]: {res[0]}, [0.1, 0.7]: {res[1]}, [0.7, 1]: {res[2]}\")\n",
+    "print(f\"-- so the ratio to done and not done (deleting the middle ones) is {res[2]/(res[2]+res[0])}\")\n",
+    "print(f\"The real ration is {d/(nd+d)}\")"
    ]
   },
   {
@@ -474,9 +545,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sample = Variable(torch.rand(1, 3))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
