--- a/experimentation/vae/origin_demo-Copy1.ipynb
+++ b/experimentation/vae/origin_demo-Copy1.ipynb
@@ -374,53 +374,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original:       tensor([[0.2682, 0.8239, 0.9571, 0.4971, 0.2083, 0.4475, 0.8214, 0.5582, 0.1044,\n",
-      "         0.0246, 0.5850]])\n",
-      "Reconstruction: tensor([[0.5001, 0.5117, 0.4990, 0.5020, 0.5073, 0.5002, 0.4931, 0.5062, 0.5028,\n",
-      "         0.1127, 0.2202]], grad_fn=<CopyBackwards>)\n",
-      "Loss: 7.4078803062438965\n",
+      "Original:       tensor([[0.3326, 0.0023, 0.2534, 0.9361, 0.7955, 0.7620, 0.2810, 0.3772, 0.0728, 0.2364, 0.4963]])\n",
+      "Reconstruction: tensor([[0.4516, 0.5441, 0.4798, 0.5115, 0.5390, 0.4983, 0.5348, 0.4998, 0.4904, 0.1753, 0.3520]], grad_fn=<CopyBackwards>)\n",
+      "Loss: 7.537787437438965\n",
       "\n",
       "\n",
-      "Original:       tensor([[0.0487, 0.8195, 0.4938, 0.9572, 0.6362, 0.0376, 0.7415, 0.7303, 0.0990,\n",
-      "         0.8412, 0.4591]])\n",
-      "Reconstruction: tensor([[0.4537, 0.5169, 0.5171, 0.5322, 0.5033, 0.4967, 0.5172, 0.4997, 0.5026,\n",
-      "         0.1034, 0.1879]], grad_fn=<CopyBackwards>)\n",
-      "Loss: 8.880202293395996\n",
+      "Original:       tensor([[0.3061, 0.6161, 0.4320, 0.6255, 0.6189, 0.5128, 0.3723, 0.6714, 0.1396, 0.2378, 0.1113]])\n",
+      "Reconstruction: tensor([[0.4987, 0.5101, 0.5079, 0.5022, 0.4979, 0.4932, 0.4817, 0.5064, 0.5077, 0.1217, 0.2193]], grad_fn=<CopyBackwards>)\n",
+      "Loss: 7.22882080078125\n",
       "\n",
       "\n",
-      "Original:       tensor([[0.9093, 0.8351, 0.1279, 0.3499, 0.4578, 0.9316, 0.4046, 0.2533, 0.2897,\n",
-      "         0.2145, 0.9662]])\n",
-      "Reconstruction: tensor([[0.4993, 0.5142, 0.5105, 0.5063, 0.4924, 0.4969, 0.4815, 0.5108, 0.5179,\n",
-      "         0.1909, 0.3128]], grad_fn=<CopyBackwards>)\n",
-      "Loss: 7.955039024353027\n",
+      "Original:       tensor([[0.6172, 0.6287, 0.7405, 0.3829, 0.9664, 0.0034, 0.9259, 0.0628, 0.0771, 0.8421, 0.8242]])\n",
+      "Reconstruction: tensor([[0.5107, 0.5062, 0.4897, 0.4747, 0.5014, 0.5015, 0.5037, 0.4838, 0.4935, 0.1738, 0.3061]], grad_fn=<CopyBackwards>)\n",
+      "Loss: 8.753585815429688\n",
       "\n",
       "\n",
-      "Original:       tensor([[0.2160, 0.8489, 0.4163, 0.1480, 0.1572, 0.9411, 0.4092, 0.7809, 0.3193,\n",
-      "         0.2689, 0.8617]])\n",
-      "Reconstruction: tensor([[0.4856, 0.5263, 0.5057, 0.4901, 0.5107, 0.5051, 0.5213, 0.4911, 0.4939,\n",
-      "         0.2202, 0.3180]], grad_fn=<CopyBackwards>)\n",
-      "Loss: 7.843619346618652\n",
+      "Original:       tensor([[0.2213, 0.9644, 0.4720, 0.8401, 0.2147, 0.2597, 0.8559, 0.9579, 0.4764, 0.5699, 0.0090]])\n",
+      "Reconstruction: tensor([[0.4931, 0.5175, 0.5219, 0.4933, 0.5007, 0.5144, 0.5293, 0.4915, 0.5022, 0.2819, 0.3306]], grad_fn=<CopyBackwards>)\n",
+      "Loss: 7.4806318283081055\n",
       "\n",
       "\n",
-      "Original:       tensor([[0.5750, 0.5237, 0.9519, 0.0711, 0.6342, 0.9242, 0.7380, 0.6900, 0.6142,\n",
-      "         0.3040, 0.0430]])\n",
-      "Reconstruction: tensor([[0.5067, 0.5032, 0.5256, 0.4791, 0.4915, 0.5126, 0.5238, 0.4843, 0.4951,\n",
-      "         0.2111, 0.2477]], grad_fn=<CopyBackwards>)\n",
-      "Loss: 7.126940727233887\n",
+      "Original:       tensor([[0.3257, 0.1583, 0.1316, 0.2509, 0.3212, 0.5082, 0.1305, 0.8695, 0.5291, 0.7489, 0.0742]])\n",
+      "Reconstruction: tensor([[0.5043, 0.5093, 0.5144, 0.4810, 0.5057, 0.5097, 0.5214, 0.4823, 0.4894, 0.1788, 0.2248]], grad_fn=<CopyBackwards>)\n",
+      "Loss: 8.011959075927734\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# torch.set_printoptions(profile=\"short\"?)\n",
+    "torch.set_printoptions(linewidth=140)\n",
     "for i in range(5):\n",
     "    sample = torch.FloatTensor(1, 11).uniform_(0, 1).to(\"cuda\")\n",
     "    x, m, s = vae1(sample)\n",
