--- a/experimentation/vae/Untitled1.ipynb
+++ b/experimentation/vae/Untitled1.ipynb
@@ -55,7 +55,7 @@
     "state_high = 10\n",
     "\n",
     "\n",
-    "def normalize(experience):\n",
+    "def noralize(experience):\n",
     "    # [s0, s1, s2, s3, a, s0, s1, s2, s3, r, d]\n",
     "    return np.concatenate((\n",
     "        normalize_state(experience[:state_dim]),\n",
